fix: align table-columns browser agnostically
This ensures that the columns in the header and body table are always
aligned if there is javascript. If there is no javascript, then they
should still be aligned for chrome and other browser that have a
scrollbar width of 15 px.

--- a/style.less
+++ b/style.less
@@ -14,16 +14,20 @@
 
     .plugin__filelisting_content {
 
+        .plugin__filelisting_headertable {
+            padding-right: 15px;
+        }
+        .plugin__filelisting_bodytable {
+            display: block;
+            max-height: 200px;
+            overflow-y: scroll;
+        }
+
         table {
             width: 100%;
             //reset default dokuwiki margin
             margin: 0;
-
-            &.plugin__filelisting_bodytable {
-                display: block;
-                max-height: 200px;
-                overflow-y: auto;
-            }
+            table-layout: fixed;
 
             //icon cells
             tr td:first-child {
